Closed Bug 1561488 Opened 5 years ago Closed 4 years ago

Crash in [@ mozilla::dom::BrowserChild::RecvUIResolutionChanged]

Categories

(Core :: DOM: Content Processes, defect, P3)

x86
Windows 8
defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- wontfix
firefox68 --- wontfix
firefox69 --- wontfix
firefox70 --- wontfix
firefox73 --- wontfix
firefox74 --- wontfix
firefox75 --- fixed

People

(Reporter: mattwoodrow, Assigned: smaug)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-8a956a9f-6615-44c8-b6ae-aae730190622.

Top 10 frames of crashing thread:

0 xul.dll mozilla::dom::BrowserChild::RecvUIResolutionChanged dom/ipc/BrowserChild.cpp:3139
1 xul.dll mozilla::dom::PBrowserChild::OnMessageReceived ipc/ipdl/PBrowserChild.cpp:5725
2 xul.dll mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:6512
3 xul.dll void mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2078
4 xul.dll nsresult mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1968
5 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1175
6 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
7 xul.dll void mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:88
8 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
9 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290

Looks like a nullptr crash, likely a regression from bug 1542664.

I got this to crash by dragging a window between monitors while a tab was still loading.

Adding ni for Masayuki based on the possible regression cause by mattwoodrow.

Flags: needinfo?(masayuki)

Hmm, I just renamed GetDocument() to GetTopLevelDocument() around the crash point so that I don't think that this is my regression.

Flags: needinfo?(masayuki)
Crash Signature: [@ mozilla::dom::BrowserChild::RecvUIResolutionChanged] → [@ mozilla::dom::BrowserChild::RecvUIResolutionChanged] [@ mozilla::dom::TabChild::RecvUIResolutionChanged]

Even before the my patch landing, there is this bug (BrowserChild was renamed from TabChild).

Matt, was this with fission enabled?

Flags: needinfo?(matt.woodrow)

No, this was not with fission enabled.

Flags: needinfo?(matt.woodrow)

The priority flag is not set for this bug.
:jimm, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jmathies)
Flags: needinfo?(jmathies)
Priority: -- → P3

Fairly low volume on release and P3; marking fix-optional to remove this bug from weekly triage.

I've had a few tab crashes. One of them is bp-8f508965-f7b7-424d-96d5-f946d0190821 68.0.1

I opened weather.com, shortly after firefox an app/tab is slowing down the browser, I chose to not stop the tab, after a minute crash bp-81b5b9fe-3e9b-4d4f-99bd-d77430190915

Assignee: nobody → bugs

These were the worrisome missing null checks I noticed, and crash-stat shows that there areactually crashes in these two places

Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d4d3b6aa5270
null check document in RecvUIResolutionChanged and RecvThemeChanged, r=bdahl
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: