Bug 1561488 - null check document in RecvUIResolutionChanged and RecvThemeChanged, r=bdahl

These were the worrisome missing null checks I noticed, and crash-stat shows that there areactually crashes in these two places

Differential Revision: https://phabricator.services.mozilla.com/D64162

--HG--
extra : moz-landing-system : lando